<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">School Administration</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_note">Welcome Home</string>
    <string name="searchPrompt">Choose a Search Option</string>

    <string-array name="searchOption">
        <item>First Name</item>
        <item>Last Name</item>
        <item>Parent First Name</item>
        <item>Parent Last Name</item>
        <item>Phone</item>
        <item>Street Name</item>
        <item>Mother\'s Name</item>
        <item>Father\'s Name</item>
        <item>Parent\'s Phone</item>
        <item>Parent\'s Work</item>
    </string-array>

    <string name="title_activity_studentdetail">Student Detail</string>
    <string name="studentId">Student ID:</string>
    <string name="name">Name</string>
    <string name="grade">Grade:</string>
    <string name="studentName">Student Name:</string>
    <string name="contact">Contact:</string>
    <string name="address1">Address 1:</string>
    <string name="address2">Address 2:</string>
    <string name="homePhone">Home Phone:</string>
    <string name="cellPhone">Cell Phone:</string>
    <string name="family">Family:</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="work">Work:</string>
    <string name="workAddress1">Work Address 1:</string>
    <string name="workAddress2">Work Address 2:</string>
    <string name="workPhone">Work Phone:</string>
    <string name="annualIncome">Annual Income:</string>
    <string name="title_activity_registration_view">Registration</string>
    <string name="totalFees">Total Fees</string>
    <string name="adminFees">Admin Fees</string>
    <string name="labFees">Lab Fees</string>
    <string name="registrationFees">Registration Fees</string>
    <string name="graduationFees">Graduation Fees</string>
    <string name="bookFees">Book Fees</string>
    <string name="placementFees">Placement Fees</string>
    <string name="acceptRegistration">View and Accept</string>

</resources>
