<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/linearParent"
    tools:context="com.example.ibrahiemmohammad.myapplication.registration_view">



    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mainTable">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="3dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acceptRegistration"
                android:layout_weight="1"
                android:onClick="acceptRegistration"
                android:textColor="@android:color/darker_gray"
                android:layout_span="2"
                android:id="@+id/acceptRegistrationButton" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/holo_orange_dark"
            android:padding="3dp">
            <TextView
                android:text="@string/totalFees"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="0" />
            <TextView
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:id="@+id/txtTotalFees"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="3dp">
            <TextView
                android:text="@string/adminFees"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="0" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:id="@+id/txtAdminFees"
                />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="3dp">
            <TextView
                android:text="@string/labFees"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="0" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:id="@+id/txtLabFees"
                />
        </TableRow>
        </TableLayout>


</LinearLayout>
